# femty

./: README.md  pyproject.toml
femty/: __init__.py  assembly.py  basis.py  dofmap.py  elements.py  mesh.py  quadrature.py
tests/: __init__.py  test_femty.py
